--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
   width: 30%;
+  margin: 10px;
 }
 
 /* On mouse-over, add a deeper shadow */
