--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -5,6 +5,7 @@
 
 /* student container start */
 .student {
+  width: 400px;
   display: grid;
   grid-template-areas:
   "name name"
@@ -39,11 +40,18 @@
 }
 
 #output-email {
+  margin-top: 10px;
   grid-area: email;
 }
 
 #delete {
+  margin-top: 25px;
   grid-area: delete;
+  background-color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  width: 30%;
+  float: right;
 }
 
 
@@ -52,6 +60,19 @@
   color: black;
   size: 1.1em;
   line-height: 1.5em;
+  margin: 5px;
+}
+
+#output-concbutton {
+  width: 125px;
+  margin-left: 40px;
+  border: 0;
+  background-color:#FFC600;
+  padding: 7px 20px;
+  cursor: pointer;
+  color: #0d1e31;
+  font: 16px/1 futuraBoldCondensed,arial,sans-s;
+  text-shadow: white 0 1px 1px;
 }
 
 /* student container end */
@@ -84,9 +105,9 @@ h1 {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
-  width: 45%;
   margin: 10px;
   margin-left: 40px;
+  width: fit-content;
 }
 
 /* deepends shadow effect on hover */
