--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -47,11 +47,15 @@
 #delete {
   margin-top: 25px;
   grid-area: delete;
-  background-color: red;
-  font-family: Arial, Helvetica, sans-serif;
   color: white;
   width: 30%;
   float: right;
+  border: 0;
+  background-color:red;
+  padding: 7px 20px;
+  cursor: pointer;
+  color: #f0f0f0;
+  font: 16px/1 futuraBoldCondensed,arial,sans-s;
 }
 
 
@@ -107,12 +111,17 @@ h1 {
   border-radius: 5px; /* 5px rounded corners */
   margin: 10px;
   margin-left: 40px;
-  width: fit-content;
+  width: 450px;
 }
 
-/* deepends shadow effect on hover */
+/* shadow effect on hover */
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+button {
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
 
 /* padding for elements in card */
@@ -144,7 +153,9 @@ h1 {
 
 .form {
   margin-left: 40px;
-  width: 260px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 300px;
   /* background-color: royalblue; */
   font-family: futuraBoldCondensed,arial,sans-s;
   color: #07294D;
