--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -124,6 +124,11 @@ h1 {
 button {
   border-radius: 5px;
   margin-bottom: 5px;
+  transition: 0.3s;
+}
+
+button:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 /* padding for elements in card */
